<resources>
    <!-- Main Activity -->
    <string name="app_name">Basic ToDo</string>
    <string name="fab_add_todo_description">Add ToDo</string>
    <string name="todo_items_list_empty">No ToDo items! You can create more on the + button</string>

    <!-- New To Do Activity -->
    <string name="tv_todo_title">Title</string>
    <string name="ed_todo_title_hint">Title</string>
    <string name="tv_todo_description">Description (optional)</string>
    <string name="ed_todo_description_hint">Describe the details of your To Do</string>
    <string name="fab_save_todo_description">Save ToDo</string>

    <!-- Toasts -->
    <string name="todo_empty_title">Title is required!</string>
    <string name="todo_added_success">ToDo successfully added!</string>
    <string name="todo_added_fail">Unable to add new todo</string>

    <!-- Delete task -->
    <string name="todo_delete_ask">Do you wish to Delete this ToDo?</string>
    <string name="todo_delete_confirm">Delete</string>
    <string name="todo_delete_cancel">Cancel</string>
    <string name="todo_delete_success">ToDo successfully deleted</string>
    <string name="todo_delete_title">Delete?</string>
</resources>